--- a/resume_sass/index.html
+++ b/resume_sass/index.html
@@ -1,45 +1,84 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Starter Template for Bootstrap</title>
-    <!-- Bootstrap core CSS -->
-    <link href="./css/style.css" rel="stylesheet">
+    <title> Portfolio Resume</title>
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
+    
     <section>
+      <div class="container">
+        <img src="img/person.png" class="profile-img">
+        <header>
+          <h1>HELLO, <br> my name is <strong>Luís Lota</strong> and I am a web developer</h1>
+        </header>
+        <img src="img/line.png" class="line">
+        <div class="row">
+          <div class="col-md-7">
+            <h2># About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet mi ornare massa gravida, auctor accumsan ipsum rhoncus. Vestibulum in erat tempor, rutrum diam fringilla, feugiat augue. Morbi dapibus bibendum erat, nec euismod lacus ultrices eu. Aliquam a bibendum ante, id convallis massa. Aliquam iaculis</p>
+          </div>
+          <div class="col-md-5">
+            <h2># Contact Info</h2>
+            <ul class="contact-list">
+              <li><img src="img/phone.png"> (978) 555-5555</li>
+              <li><img src="img/email.png"> louis.miguel.05@gmail.com</li>
+              <li><img src="img/facebook.png"> Facebook <span>https://www.facebook.com/luis.lota</span></li>
+              <li><img src="img/twitter.png"> Twitter <span>@lot_hardly</span></li>
+            </ul>
+          </div>
+        </div>
 
-    </section>
+        <div class="row">
+          <div class="col-md-7">
+            <h2># Education & Experience</h2>
+            <div class="media">
+              <div class="media-left">
+                2015-2018
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading">Whittier Technical High School</h4>
+                <p>Vestibulum in erat tempor, rutrum diam fringilla, feugiat augue</p>
+              </div>
+            </div>        
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-  </body>
-</html>
+          <div class="media">
+              <div class="media-left">
+                2000 - 2003
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading">Salem State College</h4>
+                <p>Vestibulum in erat tempor, rutrum diam fringilla, feugiat augue</p>
+              </div>
+            </div>
+
+            <div class="media">
+              <div class="media-left">
+                2004 - 2008
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading">Massachusetts Institute of Technology</h4>
+                <p>Vestibulum in erat tempor, rutrum diam fringilla, feugiat augue</p>
+              </div>
+            </div>
+
+            <div class="media">
+              <div class="media-left">
+                2009 - 2014
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading">Web Programming Job</h4>
+                <p>Vestibulum in erat tempor, rutrum diam fringilla, feugiat augue</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5">
+          </div>
+        </div>
+      </section>
+    </div>
